--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
@@ -20,7 +20,7 @@ crash.*.log
 # are not checked in
 override.tf
 override.tf.json
-*_override.tf
+#*_override.tf
 *_override.tf.json
 
 # Include override files you do wish to add to version control using negated pattern
